feat: 사용자 통계 조회 유효성 검사 및 성능 최적화
  - 날짜 범위 유효성 검사 추가 (startDate > endDate 방지)
  - 월 파라미터 유효성 검사 추가 (1-12 범위)
  - WHERE 절 YEAR(), MONTH() 함수 제거로 인덱스 활용 가능하게 개선
  - 날짜 범위 비교로 변경하여 SARGable 쿼리로 성능 최적화
  - Java 21 호환성: getFirst(), getLast()를 get(0), get(size()-1)로 변경